# syzygy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
common/: CMakeLists.txt
common/include/syzygy/: clock.hpp  log.hpp  scope_timer.hpp
docs/records/: README.md
prototypes/: CMakeLists.txt  README.md
prototypes/audio/: CMakeLists.txt  README.md  audio_probe.cpp
prototypes/hdr/: CMakeLists.txt  README.md  hdr_probe.cpp  tonemap_aces.glsl
prototypes/video/: CMakeLists.txt  README.md  video_dma_latency.cpp  video_probe.cpp
resources/: AppRun  syzygy.desktop
scripts/: analyze_audio_probe.py  run_ci.sh
src/: CMakeLists.txt
src/app/: application.cpp  application.hpp  main.cpp  main_window.cpp  main_window.hpp  video_widget.cpp  video_widget.hpp
src/audio/: pipewire_controller.cpp  pipewire_controller.hpp
src/capture/: capture_device.cpp  capture_device.hpp  capture_session.cpp  capture_session.hpp  device_monitor.cpp  device_monitor.hpp
src/settings/: settings_manager.cpp  settings_manager.hpp
src/util/: thread_pool.cpp  thread_pool.hpp
